--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'com.fortify.fod'
 version '1.0.0-SNAPSHOT'
 
 apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 sourceCompatibility = 1.8
@@ -21,11 +22,14 @@ dependencies {
 
 buildscript {
     ext.kotlin_version = '1.1.51'
+    ext.dokka_version = '0.9.15'
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
     }
 }
@@ -48,4 +52,35 @@ junitPlatform {
             include 'spek'
         }
     }
+}
+
+apply plugin: 'maven-publish'
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+            pom.withXml {
+                asNode().dependencies.'*'.findAll() {
+
+                    it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
+                        dep.name == it.artifactId.text()
+                    }
+                }.each() {
+                    it.scope*.value = 'compile'
+                }
+            }
+        }
+    }
+}
+
+model {
+    tasks.generatePomFileForMavenPublication {
+        destination = file("$buildDir/libs/BSITokenParser-${version}.pom")
+    }
+}
+
+dokka {
+    outputFormat = 'javadocJar'
+    outputDirectory = "$buildDir/libs/javadoc"
 }
