--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+        classpath "org.junit.platform:junit-platform-gradle-plugin:1.0.0"
     }
 }
 
