--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,12 @@ publishing {
                         dep.name == it.artifactId.text()
                     }
                 }.each() {
+
+                    // explicitly remove the kotlin jre requirement
+                    if (it.artifactId.text() == 'kotlin-stdlib-jre8') {
+                        it.parent().remove(it)
+                    }
+
                     it.scope*.value = 'compile'
                 }
             }
