--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,19 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     maven { url "http://dl.bintray.com/jetbrains/spek" }
+    jcenter()
 }
 
 dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile 'com.beust:klaxon:0.30'
+
     testCompile "org.jetbrains.spek:spek-api:1.1.5"
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test', version: '1.1.2'
     testCompile "org.jetbrains.spek:spek-junit-platform-engine:1.1.5"
+
+
 }
 
 buildscript {
