--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,38 @@
-group 'com.fortify.fod'
-version '1.1.0'
+plugins {
+    id 'org.jetbrains.dokka' version '1.4.30'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+    id 'maven-publish'
+}
 
-apply plugin: 'kotlin'
-apply plugin: 'org.jetbrains.dokka'
-apply plugin: 'org.junit.platform.gradle.plugin'
+group 'com.fortify.fod'
+version '1.2.0'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven { url "http://dl.bintray.com/jetbrains/spek" }
-    jcenter()
+	jcenter() // Currently required for dokkaJavadoc task, see for example https://github.com/detekt/detekt/issues/3461
 }
 
 dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    compile 'com.beust:klaxon:0.30'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile 'com.beust:klaxon:5.5'
 
     testCompile "org.jetbrains.spek:spek-api:1.1.5"
-    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test', version: '1.1.2'
+    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test', version: '1.4.32'
     testCompile "org.jetbrains.spek:spek-junit-platform-engine:1.1.5"
+    testCompile "org.junit.jupiter:junit-jupiter-engine:5.3.2"
+	testCompile "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
+	testRuntime ('org.jetbrains.spek:spek-junit-platform-engine:1.1.5') {
+        exclude group: 'org.junit.platform'
+        exclude group: 'org.jetbrains.kotlin'
+    }
 }
 
-buildscript {
-    ext.kotlin_version = '1.2.0'
-    ext.dokka_version = '0.9.15'
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
-        classpath "org.junit.platform:junit-platform-gradle-plugin:1.0.0"
+test {
+    useJUnitPlatform {
+        includeEngines 'spek'
     }
 }
 
@@ -48,16 +47,6 @@ compileTestKotlin {
         jvmTarget = "1.8"
     }
 }
-
-junitPlatform {
-    filters {
-        engines {
-            include 'spek'
-        }
-    }
-}
-
-apply plugin: 'maven-publish'
 
 publishing {
     publications {
@@ -84,11 +73,6 @@ model {
 }
 
 def javadocDir = "$buildDir/libs/javadoc"
-
-task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
-    outputFormat = 'javadoc'
-    outputDirectory = javadocDir
-}
 
 task javadocJar(type: Jar, dependsOn: dokkaJavadoc) {
     classifier = 'javadoc'
